# bsse-heuristic-search-rstar-mrastar

./: CMakeLists.txt  README.md  analysis.ipynb  bench.yml  benchmark.py  thinscen.py
.github/workflows/: ci.yml
CMake/: FindCatch2.cmake
common/: CMakeLists.txt
common/include/: astar.h  closed.h  hashutils.h  heuristic_algo.h  map.h  node.h  open.h  position.h  scenario.h
common/src/: astar.cpp  map.cpp  node.cpp  position.cpp  scenario.cpp
common/test/: test_astar.cpp  test_closed.cpp  test_map.cpp  test_open.cpp  test_scenario.cpp
dataset/: moving-ai-large-test.map.scen.thin  sample-moving-ai-2.map  sample-moving-ai-2.map.scen.thin  sample-moving-ai.map  sample-moving-ai.map.scen.thin
dataset/cities/: Milan_1_1024.map.scen.thin  NewYork_1_1024.map.scen.thin
dataset/starcraft/: BrokenSteppes.map.scen.thin  Legacy.map.scen.thin  WheelofWar.map.scen.thin
dump/: CMakeLists.txt
dump/include/: open_dump.h  rss_check.h
dump/src/: main.cpp  open_dump.cpp
mrastar/: CMakeLists.txt
mrastar/include/: meta_algorithms.h  meta_algorithms_impl.h  mrastar.h  multi_resolution_map.h  open_with_min_heuristic.h
mrastar/src/: mrastar.cpp  multi_resolution_map.cpp
mrastar/test/: test_mrastar.cpp
rstar/: CMakeLists.txt
rstar/include/: bounded_astar.h  rstar.h
rstar/src/: bounded_astar.cpp  rstar.cpp
rstar/test/: test_rstar.cpp
